deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-react
  labels:
    app: frontend-reat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-react
  template:
    metadata:
      labels:
        app: frontend-react
    spec:
      containers:
      - name: frontend-react
        image: ghcr.io/shclub/edu12-3
        ports:
        - containerPort: 80
