service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-react
spec:
  selector:
    app: frontend-react
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 80
  type: ClusterIP
